IGNITE-15599 Get rid Guava in Calcite module  (#398)