@@ -21,8 +21,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
 import org.apache.calcite.plan.RelOptPlanner;
@@ -81,7 +79,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
             input.getInputs().get(0),
             input.getInputs().get(1),
             input.getExpression("condition"),
-            ImmutableSet.copyOf(Commons.transform(input.getIntegerList("variablesSet"), CorrelationId::new)),
+            Set.copyOf(Commons.transform(input.getIntegerList("variablesSet"), CorrelationId::new)),
             input.getEnum("joinType", JoinRelType.class));
     }
 
@@ -107,7 +105,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         List<Integer> newRightCollationFields = maxPrefix(rightCollation.getKeys(), joinInfo.leftKeys);
 
         if (nullOrEmpty(newRightCollationFields))
-            return ImmutableList.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY), inputTraits));
+            return List.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY), inputTraits));
 
         // We preserve left edge collation only if batch size == 1
         if (variablesSet.size() == 1)
@@ -115,7 +113,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         else
             nodeTraits = nodeTraits.replace(RelCollations.EMPTY);
 
-        return ImmutableList.of(Pair.of(nodeTraits, inputTraits));
+        return List.of(Pair.of(nodeTraits, inputTraits));
     }
 
     /** {@inheritDoc} */
@@ -128,8 +126,8 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
 
         RewindabilityTrait rewindability = TraitUtils.rewindability(left);
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(rewindability),
-            ImmutableList.of(left, right.replace(RewindabilityTrait.REWINDABLE))));
+        return List.of(Pair.of(nodeTraits.replace(rewindability),
+            List.of(left, right.replace(RewindabilityTrait.REWINDABLE))));
     }
 
     /** {@inheritDoc} */
@@ -145,7 +143,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
 
             return Pair.of(
                 baseTraits.getKey(),
-                ImmutableList.of(
+                List.of(
                     baseTraits.getValue().get(0),
                     baseTraits.getValue().get(1)
                 )
@@ -153,7 +151,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         }
 
         return Pair.of(nodeTraits.replace(RelCollations.EMPTY),
-            ImmutableList.of(left.replace(RelCollations.EMPTY), right));
+            List.of(left.replace(RelCollations.EMPTY), right));
     }
 
     /** {@inheritDoc} */
@@ -164,7 +162,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         RewindabilityTrait rewindability = TraitUtils.rewindability(nodeTraits);
 
         return Pair.of(nodeTraits.replace(rewindability),
-            ImmutableList.of(left.replace(rewindability), right.replace(RewindabilityTrait.REWINDABLE)));
+            List.of(left.replace(rewindability), right.replace(RewindabilityTrait.REWINDABLE)));
     }
 
     /** {@inheritDoc} */
@@ -196,7 +194,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         selfCorrIds.addAll(nodeCorr.correlationIds());
 
         return Pair.of(nodeTraits,
-            ImmutableList.of(
+            List.of(
                 inTraits.get(0).replace(nodeCorr),
                 inTraits.get(1).replace(CorrelationTrait.correlations(selfCorrIds))
             )
@@ -209,7 +207,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
         Set<CorrelationId> rightCorrIds = TraitUtils.correlation(inTraits.get(1)).correlationIds();
 
         if (!rightCorrIds.containsAll(variablesSet))
-            return ImmutableList.of();
+            return List.of();
 
         Set<CorrelationId> corrIds = new HashSet<>(rightCorrIds);
 
@@ -218,7 +216,7 @@ public class IgniteCorrelatedNestedLoopJoin extends AbstractIgniteJoin {
 
         corrIds.removeAll(variablesSet);
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(corrIds)), inTraits));
+        return List.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(corrIds)), inTraits));
     }
 
     /** {@inheritDoc} */
