@@ -18,7 +18,7 @@
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
 import java.util.List;
-import com.google.common.collect.ImmutableList;
+
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelInput;
@@ -67,7 +67,7 @@ public abstract class IgniteMapAggregateBase extends IgniteAggregate implements 
         RelTraitSet nodeTraits,
         List<RelTraitSet> inputTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits, ImmutableList.of(inputTraits.get(0))));
+        return List.of(Pair.of(nodeTraits, List.of(inputTraits.get(0))));
     }
 
     /** {@inheritDoc} */
@@ -78,9 +78,9 @@ public abstract class IgniteMapAggregateBase extends IgniteAggregate implements 
         RelTraitSet in = inputTraits.get(0);
 
         if (TraitUtils.distribution(in).satisfies(IgniteDistributions.single()))
-            return ImmutableList.of();
+            return List.of();
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(TraitUtils.distribution(in)), ImmutableList.of(in)));
+        return List.of(Pair.of(nodeTraits.replace(TraitUtils.distribution(in)), List.of(in)));
     }
 
     /** {@inheritDoc} */
@@ -88,7 +88,7 @@ public abstract class IgniteMapAggregateBase extends IgniteAggregate implements 
         RelTraitSet nodeTraits,
         List<RelTraitSet> inTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
+        return List.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
             inTraits));
     }
 }
