@@ -18,7 +18,7 @@
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
 import java.util.List;
-import com.google.common.collect.ImmutableList;
+
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelInput;
@@ -68,7 +68,7 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
         RelTraitSet nodeTraits,
         List<RelTraitSet> inputTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits, ImmutableList.of(inputTraits.get(0))));
+        return List.of(Pair.of(nodeTraits, List.of(inputTraits.get(0))));
     }
 
     /** {@inheritDoc} */
@@ -79,9 +79,9 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
         RelTraitSet in = inputTraits.get(0);
 
         if (!TraitUtils.distribution(in).satisfies(IgniteDistributions.single()))
-            return ImmutableList.of();
+            return List.of();
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(IgniteDistributions.single()), ImmutableList.of(in)));
+        return List.of(Pair.of(nodeTraits.replace(IgniteDistributions.single()), List.of(in)));
     }
 
     /** {@inheritDoc} */
@@ -89,7 +89,7 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
         RelTraitSet nodeTraits,
         List<RelTraitSet> inTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
+        return List.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
             inTraits));
     }
 }
