@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableList;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.core.CorrelationId;
 import org.apache.calcite.rel.type.RelDataType;
@@ -50,9 +49,9 @@ public interface IgniteMapSetOp extends IgniteSetOp {
             .allMatch(RewindabilityTrait::rewindable);
 
         if (rewindable)
-            return ImmutableList.of(Pair.of(nodeTraits.replace(RewindabilityTrait.REWINDABLE), inputTraits));
+            return List.of(Pair.of(nodeTraits.replace(RewindabilityTrait.REWINDABLE), inputTraits));
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(RewindabilityTrait.ONE_WAY),
+        return List.of(Pair.of(nodeTraits.replace(RewindabilityTrait.ONE_WAY),
             Commons.transform(inputTraits, t -> t.replace(RewindabilityTrait.ONE_WAY))));
     }
 
@@ -62,13 +61,13 @@ public interface IgniteMapSetOp extends IgniteSetOp {
         List<RelTraitSet> inputTraits
     ) {
         if (inputTraits.stream().allMatch(t -> TraitUtils.distribution(t).satisfies(IgniteDistributions.single())))
-            return ImmutableList.of(); // If all distributions are single or broadcast IgniteSingleMinus should be used.
+            return List.of(); // If all distributions are single or broadcast IgniteSingleMinus should be used.
 
-        return ImmutableList.of(
+        return List.of(
             Pair.of(nodeTraits.replace(IgniteDistributions.random()), Commons.transform(inputTraits,
                 t -> TraitUtils.distribution(t) == IgniteDistributions.broadcast() ?
                     // Allow broadcast with trim-exchange to be used in map-reduce set-op.
-                    t.replace(IgniteDistributions.hash(ImmutableList.of(0))) :
+                    t.replace(IgniteDistributions.hash(List.of(0))) :
                     t.replace(IgniteDistributions.random())))
         );
     }
@@ -83,7 +82,7 @@ public interface IgniteMapSetOp extends IgniteSetOp {
             .flatMap(corrTr -> corrTr.correlationIds().stream())
             .collect(Collectors.toSet());
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(correlationIds)),
+        return List.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(correlationIds)),
             inTraits));
     }
 
